--- a/example/package.json
+++ b/example/package.json
@@ -19,14 +19,12 @@
     "@swc/plugin-styled-components": "^1.5.68",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.6.5",
-    "bear-jsutils": "3.2.0-alpha.4",
+    "bear-jsutils": "3.2.5-alpha.14",
     "@acrool/js-logger": "link:..",
-    "@acrool/react-table": "4.3.8-alpha.2",
     "styled-components": "5.3.9",
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "vite-plugin-mkcert": "1.16.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
@@ -34,6 +32,7 @@
     "@vitejs/plugin-react-swc": "^3.0.0",
     "typescript": "^4.9.3",
     "vite": "^4.2.0",
-    "wrangler": "^3.11.0"
+    "wrangler": "^3.11.0",
+    "vite-plugin-svgr": "^4.2.0"
   }
 }
