--- a/example/package.json
+++ b/example/package.json
@@ -18,13 +18,15 @@
     "@swc/core": "^1.3.68",
     "@swc/plugin-styled-components": "^1.5.68",
     "@types/styled-components": "^5.1.26",
+    "@types/dom-to-image": "^2.6.7",
     "axios": "^1.6.5",
     "bear-jsutils": "3.2.5-alpha.14",
     "@acrool/js-logger": "link:..",
     "styled-components": "5.3.9",
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "dom-to-image": "^2.6.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
