--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "browser": "./dist/acrool-js-logger.es.js",
       "import": "./dist/acrool-js-logger.es.js"
     }
