add export  required

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     ".": {
       "types": "./dist/index.d.ts",
       "browser": "./dist/acrool-js-logger.es.js",
-      "import": "./dist/acrool-js-logger.es.js"
+      "import": "./dist/acrool-js-logger.es.js",
+      "require": "./dist/acrool-js-logger.cjs.js"
     }
   },
   "files": [
