--- a/example/package.json
+++ b/example/package.json
@@ -8,34 +8,31 @@
     "build": "vite build",
     "preview": "vite preview",
     "pages:dev": "wrangler pages dev --proxy 3000 -- yarn dev",
-    "pages:deploy": "NODE_VERSION=18 yarn run build && wrangler pages deploy ./dist"
+    "pages:deploy": "NODE_VERSION=20 yarn run build && wrangler pages deploy ./dist"
   },
   "resolutions": {
-    "dayjs": "1.x",
-    "styled-components": "5.3.9"
-  },
-  "dependencies": {
-    "@acrool/js-logger": "link:..",
-    "@acrool/react-grid": "5.2.2",
-    "styled-components": "5.3.9",
-    "@swc/core": "^1.3.68",
-    "@swc/plugin-styled-components": "^1.5.68",
-    "@types/styled-components": "^5.1.26",
-    "@types/dom-to-image": "^2.6.7",
-    "axios": "^1.6.5",
-    "bear-jsutils": "3.2.5-alpha.14",
-    "dayjs": "^1.11.10",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "dom-to-image": "^2.6.0"
+    "styled-components": "6.1.17"
   },
   "devDependencies": {
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
+    "@acrool/js-utils": "^3.2.15",
+    "@acrool/react-grid": "^6.0.5",
+    "@acrool/js-logger": "link:..",
+    "@chromatic-com/storybook": "^1.5.0",
+    "@emotion/is-prop-valid": "^1.2.2",
+    "@swc/core": "^1.3.68",
+    "@swc/plugin-styled-components": "^6.8.2",
+    "@types/dom-to-image": "^2.6.7",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react-swc": "^3.0.0",
-    "typescript": "^4.9.3",
-    "vite": "^4.2.0",
-    "wrangler": "^3.11.0",
-    "vite-plugin-svgr": "^4.2.0"
+    "dom-to-image": "^2.6.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "sass": "^1.77.1",
+    "styled-components": "6.1.17",
+    "typescript": "^5.2.2",
+    "vite": "^6.3.4",
+    "vite-plugin-svgr": "^4.2.0",
+    "wrangler": "4.14.4"
   }
 }
