--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@acrool/js-logger",
-  "version": "1.0.27-alpha.2",
+  "version": "1.0.27",
   "description": "style color console.log",
   "keywords": [
     "acrool",
